{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 95,
  "lineage": "dd35676c-b9ad-af1f-f074-96fbdacbf71b",
  "resources": [
    {
      "module": "module.elastic-search-master",
      "mode": "managed",
      "type": "aws_instance",
      "name": "elastic_search_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096fda3c22c1c990a",
            "arn": "arn:aws:ec2:us-east-1:710772128177:instance/i-0c0ee9b2d51b2265e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c0ee9b2d51b2265e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new_private_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-099f5b03e8549c0d0",
            "private_dns": "ip-172-31-80-53.ec2.internal",
            "private_ip": "172.31.80.53",
            "public_dns": "ec2-3-90-69-229.compute-1.amazonaws.com",
            "public_ip": "3.90.69.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0483e22ab14521a66",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "SG with https rule_master",
              "elastic-search-ssh-rule_master",
              "elastic_search_allow_inter_communication_master"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-91ab6fb0",
            "tags": {
              "Name": "elastic-search-master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-008c6db74834ef037",
              "sg-04821149ac4b9ecfd",
              "sg-08bd29354b5f2f29a"
            ]
          },
          "dependencies": [
            "module.elastic-search-master.aws_security_group.elastic_search_allow_https_master",
            "module.elastic-search-master.aws_security_group.elastic_search_allow_inter_communication_master",
            "module.elastic-search-master.aws_security_group.elastic_search_allow_ssh_master",
            "module.elastic-search-master.module.common_resources.aws_security_group.elastic_search_allow_https_node",
            "module.elastic-search-master.module.common_resources.aws_security_group.elastic_search_allow_inter_communication_node",
            "module.elastic-search-master.module.common_resources.aws_security_group.elastic_search_allow_ssh_node",
            "module.elastic-search-master.module.elastic-search-node1.aws_instance.elastic_search_node",
            "module.elastic-search-master.module.elastic-search-node2.aws_instance.elastic_search_node"
          ]
        }
      ]
    },
    {
      "module": "module.elastic-search-master.module.elastic-search-node2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "elastic_search_node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096fda3c22c1c990a",
            "arn": "arn:aws:ec2:us-east-1:710772128177:instance/i-0efb05ec784537658",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0efb05ec784537658",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new_private_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-060ab93292bcba9d0",
            "private_dns": "ip-172-31-84-114.ec2.internal",
            "private_ip": "172.31.84.114",
            "public_dns": "ec2-3-90-61-135.compute-1.amazonaws.com",
            "public_ip": "3.90.61.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03a4de0e08fc6d66f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "SG with https rule_node",
              "elastic-search-ssh-rule_node",
              "elastic_search_allow_inter_communication_node"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-91ab6fb0",
            "tags": {
              "Name": "elastic-search-node-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07b219bd68f8817cc",
              "sg-093b70b8cb6afdbd4",
              "sg-0d31b993203570d6c"
            ]
          },
          "dependencies": [
            "module.elastic-search-master.module.common_resources.aws_security_group.elastic_search_allow_https_node",
            "module.elastic-search-master.module.common_resources.aws_security_group.elastic_search_allow_inter_communication_node",
            "module.elastic-search-master.module.common_resources.aws_security_group.elastic_search_allow_ssh_node"
          ]
        }
      ]
    },
    {
      "module": "module.elastic-search-master.module.elastic-search-node1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "elastic_search_node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096fda3c22c1c990a",
            "arn": "arn:aws:ec2:us-east-1:710772128177:instance/i-003d81325a1b6d52d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003d81325a1b6d52d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new_private_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a394cdd8b62c75e0",
            "private_dns": "ip-172-31-81-144.ec2.internal",
            "private_ip": "172.31.81.144",
            "public_dns": "ec2-54-165-238-222.compute-1.amazonaws.com",
            "public_ip": "54.165.238.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b9eb95a8fb05b338",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "SG with https rule_node",
              "elastic-search-ssh-rule_node",
              "elastic_search_allow_inter_communication_node"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-91ab6fb0",
            "tags": {
              "Name": "elastic-search-node-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07b219bd68f8817cc",
              "sg-093b70b8cb6afdbd4",
              "sg-0d31b993203570d6c"
            ]
          },
          "dependencies": [
            "module.elastic-search-master.module.common_resources.aws_security_group.elastic_search_allow_https_node",
            "module.elastic-search-master.module.common_resources.aws_security_group.elastic_search_allow_inter_communication_node",
            "module.elastic-search-master.module.common_resources.aws_security_group.elastic_search_allow_ssh_node"
          ]
        }
      ]
    },
    {
      "module": "module.elastic-search-master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elastic_search_allow_https_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710772128177:security-group/sg-008c6db74834ef037",
            "description": "This SG allows ssh into the server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows port http for inter communications",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows port https for inter communications",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-008c6db74834ef037",
            "ingress": [],
            "name": "SG with https rule_master",
            "name_prefix": "",
            "owner_id": "710772128177",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-d2cbc1a8"
          }
        }
      ]
    },
    {
      "module": "module.elastic-search-master.module.common_resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elastic_search_allow_https_node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710772128177:security-group/sg-07b219bd68f8817cc",
            "description": "This SG allows ssh into the server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows port http for inter communications",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows port https for inter communications",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-07b219bd68f8817cc",
            "ingress": [],
            "name": "SG with https rule_node",
            "name_prefix": "",
            "owner_id": "710772128177",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-d2cbc1a8"
          }
        }
      ]
    },
    {
      "module": "module.elastic-search-master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elastic_search_allow_inter_communication_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710772128177:security-group/sg-04821149ac4b9ecfd",
            "description": "This SG allows ssh into the server",
            "egress": [],
            "id": "sg-04821149ac4b9ecfd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows port 9200-9300 for inter communications",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9300
              }
            ],
            "name": "elastic_search_allow_inter_communication_master",
            "name_prefix": "",
            "owner_id": "710772128177",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-d2cbc1a8"
          }
        }
      ]
    },
    {
      "module": "module.elastic-search-master.module.common_resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elastic_search_allow_inter_communication_node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710772128177:security-group/sg-0d31b993203570d6c",
            "description": "This SG allows ssh into the server",
            "egress": [],
            "id": "sg-0d31b993203570d6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows port 9200-9300 for inter communications",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9300
              }
            ],
            "name": "elastic_search_allow_inter_communication_node",
            "name_prefix": "",
            "owner_id": "710772128177",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-d2cbc1a8"
          }
        }
      ]
    },
    {
      "module": "module.elastic-search-master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elastic_search_allow_ssh_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710772128177:security-group/sg-08bd29354b5f2f29a",
            "description": "This SG allows ssh into the server",
            "egress": [],
            "id": "sg-08bd29354b5f2f29a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows port 22 for SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "elastic-search-ssh-rule_master",
            "name_prefix": "",
            "owner_id": "710772128177",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-d2cbc1a8"
          }
        }
      ]
    },
    {
      "module": "module.elastic-search-master.module.common_resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elastic_search_allow_ssh_node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:710772128177:security-group/sg-093b70b8cb6afdbd4",
            "description": "This SG allows ssh into the server",
            "egress": [],
            "id": "sg-093b70b8cb6afdbd4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows port 22 for SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "elastic-search-ssh-rule_node",
            "name_prefix": "",
            "owner_id": "710772128177",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-d2cbc1a8"
          }
        }
      ]
    }
  ]
}